tests/transpiler/x/fs/nested_function.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(15,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (14:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(15,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (14:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(16,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (14:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(16,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (14:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(14,5): error FS0588: Block following this 'let' is unfinished. Expect an expression.
