tests/transpiler/x/fs/nested_function.fs
// Mochi 0.10.31 - generated 2025-07-19 10:38:37 UTC
open System

let print (x: obj) =
    match x with
    | :? bool as b -> printfn "%d" (if b then 1 else 0)
    | :? float as f -> printfn "%.1f" f
    | :? string as s -> printfn "%s" s
    | :? System.Collections.IEnumerable as e ->
        e |> Seq.cast<obj> |> Seq.map string |> String.concat " " |> printfn "%s"
    | _ -> printfn "%O" x

let outer x =
    let inner y =
    x + y
    inner 5
print (outer 3)
